KAFKA-18522: Slice records for share fetch